# posthog-python

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BEFORE_SEND.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_ANALYTICS.md  RELEASING.md  TEST_TOOL_CALLS_README.md  debug_test_output.py  default  example.py  llm_observability_example.py  llm_observability_examples.py  llm_observability_stream_example.py  mypy-baseline.txt  mypy.ini  os  pyproject.toml  realtime_flags_example.py  setup.cfg  setup.py  setup_analytics.py  simulator.py  test.py  test_capture_ai_local.py  test_output.txt  test_tool_calls_issue.py
.changeset/: calm-contexts-capture.md  fuzzy-pandas-scope.md  green-ravens-validate.md  polite-wolves-warn.md  quiet-llamas-join.md  sweet-ravens-tap.md
.github/: dependabot.yml  pull_request_template.md
.github/scripts/: check_crap_threshold.py  check_public_api.py  check_strict_types.sh  test_check_public_api.py
.github/workflows/: call-flags-project-board.yml  ci.yml  codeql.yml  generate-references.yaml  generate-references.yml  release.yaml  release.yml  sdk-compliance.yml  tests.yml
.posthog/121656e6-dd19-4c93-ab2f-12e7b25f509e/: research.json
.posthog/4aacaff7-1e62-4f50-ada6-c4a8a3b27831/: research.json
.posthog/5b004120-974f-46f0-b915-42023280d26c/: research.json
.posthog/5e3adc01-616f-4d03-88cc-9ce434cbf9ca/: plan.md  research.json
.posthog/795c8d9d-a636-48a0-9766-5e72e3fb6169/: research.json
.posthog/934ad430-2319-4467-be71-14587e5a3874/: plan.md  research.json
.posthog/95b39595-50eb-4ffb-b550-428fae3feb91/: plan.md  research.json
.posthog/9b8941c3-af2f-4d82-b414-ad27fedabe9a/: eval.json
.posthog/a8d6aa99-b57e-422d-a762-f50beb212f30/: research.json
.posthog/d040e2b0-3ef8-4229-ba22-becbcfd9e1fa/: plan.md  research.json
.sampo/: config.toml
.sampo/changesets/: add-ai-stop-reason.md  ai-tokens-source.md  ancient-queen-tursas.md  anthropic-cache-ttl-breakdown.md  ardent-earl-tuoni.md  ardent-king-tursas.md  ardent-knight-vainamoinen.md  ardent-runesinger-lempo.md  async-stream-context-manager.md  before-send-module-setup.md  brave-otters-mask.md  canonical-exception-list-order.md  capture-ai-lane.md  capture-exception-otel-context.md  capture-v1-mode.md  chivalrous-baron-tapio.md  claude-agent-sdk-graceful-fallback.md  (+75 more)
Semantic/: Kernel
docs/: doc_constant.py  generate_json_schemas.py
examples/: async_redis_flag_cache.py  celery_integration.py  mcp_analytics_demo.py  mcp_stateless.py  mcp_stateless_fastapi.py  redis_flag_cache.py  remote_config.py
examples/example-ai-autogen/: README.md  agent.py  pyproject.toml
examples/example-ai-gemini/: README.md  chat.py  image_generation.py  pyproject.toml  requirements.txt  streaming.py
examples/example-ai-instructor/: README.md  extract.py  pyproject.toml
examples/example-ai-langchain/: README.md  callback_handler.py  otel.py  pyproject.toml  requirements.txt
examples/example-ai-langgraph/: README.md  agent.py  pyproject.toml
examples/example-ai-llamaindex/: README.md  chat.py  pyproject.toml  uv.toml
examples/example-ai-mirascope/: README.md  chat.py  pyproject.toml
integration_tests/django5/: pyproject.toml
integration_tests/django5/testdjango/: views.py
openfeature-provider/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
openfeature-provider/openfeature/contrib/provider/posthog/: __init__.py  provider.py
openfeature-provider/tests/: conftest.py  test_provider_e2e.py  test_provider_unit.py
posthog/: CHANGELOG.md  __init__.py  _async_consumer.py  _async_request.py  _async_utils.py  _logging.py  _uuid.py  args.py  async_client.py  async_consumer.py  async_request.py  bucketed_rate_limiter.py  capture_compression.py  capture_mode.py  capture_v1.py  client.py  consumer.py  contexts.py  dependency_graph.py  exception_capture.py  exception_signing.py  exception_utils.py  factory.py  feature_flag_evaluations.py  feature_flags.py  flag_definition_cache.py  local_vars.py  metrics_capture.py  poller.py  rate_limiter.py  request.py  scopes.py  synthetic_exception.py  types.py  utils.py  version.py
references/: posthog-python-references-6.7.10.json  posthog-python-references-6.7.11.json  posthog-python-references-6.7.12.json  posthog-python-references-6.7.13.json  posthog-python-references-6.7.14.json  posthog-python-references-6.7.5.json  posthog-python-references-6.7.7.json  posthog-python-references-6.8.0.json  posthog-python-references-6.9.0.json  posthog-python-references-6.9.1.json  posthog-python-references-6.9.2.json  posthog-python-references-6.9.3.json  posthog-python-references-7.0.0.json  posthog-python-references-7.14.0.json  posthog-python-references-7.14.1.json  posthog-python-references-7.14.2.json  posthog-python-references-7.15.0.json  posthog-python-references-7.15.1.json  posthog-python-references-7.15.3.json  posthog-python-references-7.15.4.json  posthog-python-references-7.16.0.json  posthog-python-references-7.16.1.json  posthog-python-references-7.16.2.json  posthog-python-references-7.16.3.json  posthog-python-references-7.16.4.json  posthog-python-references-7.17.0.json  posthog-python-references-7.18.0.json  posthog-python-references-7.18.1.json  posthog-python-references-7.18.2.json  posthog-python-references-7.18.3.json  posthog-python-references-7.19.0.json  posthog-python-references-7.19.1.json  posthog-python-references-7.19.2.json  posthog-python-references-7.20.0.json  posthog-python-references-7.20.1.json  posthog-python-references-7.20.2.json  posthog-python-references-7.20.3.json  posthog-python-references-7.20.4.json  posthog-python-references-7.20.5.json  posthog-python-references-7.21.0.json  (+18 more)
sdk_compliance_adapter/: CONTRIBUTING.md  Dockerfile  Dockerfile.v1  README.md  adapter.py  docker-compose.yml  requirements.txt
sentry_django_example/: manage.py
test_project_django5/: .gitignore  manage.py  pyproject.toml  test_exception_capture.py  test_middleware.py
test_project_django5/testdjango/: asgi.py  settings.py  urls.py  views.py  wsgi.py
(+311 files in other folders)
