[project]
name = "test-django5"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "uvicorn[standard]",
    "posthog",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-django>=4.0",
    "httpx>=0.27",
]

[tool.uv.sources]
posthog = { path = "..", editable = true }
