[project]
name = "example-ai-llamaindex"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "llama-index>=0.11.0",
    "llama-index-llms-openai>=0.3.0",
    "opentelemetry-instrumentation-llamaindex>=0.24.0",
    "opentelemetry-sdk>=1.30.0",
    "posthog[otel]>=7.11.0",
]

[tool.uv.sources]
posthog = { path = "../.." }
