[project]
name = "example-ai-mirascope"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mirascope>=1.0.0",
    "openai>=1.0.0",
    "opentelemetry-instrumentation-openai-v2>=2.0b0",
    "opentelemetry-sdk>=1.30.0",
    "posthog[otel]>=7.11.0",
]

[tool.uv.sources]
posthog = { path = "../.." }
